<resources>
    <string name="app_name">BrainFk Interpreter</string>
    <string name="tab1">Code</string>
    <string name="tab2">Output</string>
    <string name="output_default_string">Run Code to see output</string>
    <string name="code_hint">Code</string>
    <string name="input_hint">Input</string>
    <string name="run">Run</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="dot">.</string>
    <string name="comma">,</string>
    <string name="left_shift">\u003c</string>
    <string name="right_shift">\u003e</string>
    <string name="start_loop">[</string>
    <string name="end_loop">]</string>

    <string name="space_button_desc">Space Button</string>
    <string name="enter_button_desc">Enter Button</string>
    <string name="backspace_desc">Back Space Button</string>

    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="cell_size_settings">Choose Cell Size</string>
    <string name="eight_bit">8 - bit</string>
    <string name="sixteen_bit">16 - bit</string>
    <string name="thritytwo_bit">32 - bit</string>
    <string name="sixtyfour_bit">64 - bit</string>
    <string name="number_of_cells_colon">Number of Cells :</string>
    <string name="number_of_cells">Number of Cells</string>

    <string name="settings_pref">SettingsPreferences</string>
    <string name="num_cells_key">NumCellsKey</string>
    <string name="cell_size_key">CellSizeKey</string>


    <string name="about_body">This application is an interpreter for the Brainfuck programming language. The
        language operates on the basis of cells of a fixed size. The number of cells and the size of each
        cell can be changed from the settings.\n\n

        More information about the language, its syntax and its various commands can be found here
        -\n

        https://en.wikipedia.org/wiki/Brainfuck
    </string>

    <string name="designed_by"><font color="#673AB7"><b>Designed and developed by</b></font></string>
    <string name="signature"><font color="#673AB7"><b>Sandeep Tadepalli</b></font></string>
</resources>