<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/code_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:id="@+id/code_field"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/input_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/run_button"
                android:text="@string/run"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="?android:attr/buttonBarStyle">

            <com.google.android.material.button.MaterialButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:id="@+id/plus_button"
                android:text="@string/plus"
                style="?android:attr/buttonBarButtonStyle"/>

            <com.google.android.material.button.MaterialButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:id="@+id/minus_button"
                android:text="@string/minus"
                style="?android:attr/buttonBarButtonStyle"/>

            <com.google.android.material.button.MaterialButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:id="@+id/left_shift_button"
                android:text="@string/left_shift"
                style="?android:attr/buttonBarButtonStyle"/>

            <com.google.android.material.button.MaterialButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:id="@+id/right_shift_button"
                android:text="@string/right_shift"
                style="?android:attr/buttonBarButtonStyle"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="?android:attr/buttonBarStyle">

            <com.google.android.material.button.MaterialButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:id="@+id/start_loop_button"
                android:text="@string/start_loop"
                style="?android:attr/buttonBarButtonStyle"/>

            <com.google.android.material.button.MaterialButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:id="@+id/end_loop_button"
                android:text="@string/end_loop"
                style="?android:attr/buttonBarButtonStyle"/>

            <com.google.android.material.button.MaterialButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:id="@+id/dot_button"
                android:text="@string/dot"
                style="?android:attr/buttonBarButtonStyle"/>

            <com.google.android.material.button.MaterialButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:id="@+id/comma_button"
                android:text="@string/comma"
                style="?android:attr/buttonBarButtonStyle"/>

        </TableRow>

    </TableLayout>

</LinearLayout>