<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_app_bar_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryLight"
            android:id="@+id/settings_material_tool_bar"
            app:title="@string/settings"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cell_size_settings"
        android:textSize="24sp"
        android:id="@+id/cell_size_setting_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_app_bar_layout"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:id="@+id/radio_group"
        app:layout_constraintTop_toBottomOf="@id/cell_size_setting_text"
        app:layout_constraintLeft_toLeftOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight_bit"
            android:textSize="20sp"
            android:id="@+id/eight_bit_radio"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sixteen_bit"
            android:textSize="20sp"
            android:id="@+id/sixteen_bit_radio"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thritytwo_bit"
            android:textSize="20sp"
            android:id="@+id/thirtytwo_bit_radio"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sixtyfour_bit"
            android:textSize="20sp"
            android:id="@+id/sixtyfour_bit_radio"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:orientation="horizontal"
        android:background="@color/black"
        android:id="@+id/line"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_cells_colon"
            android:textSize="24sp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:minWidth="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/num_cells_field"
            android:inputType="number"
            android:autofillHints="@string/number_of_cells" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>